<?xml version="1.0"?>
<package>
  <name>rviz_bebop</name>
  <version>0.0.0</version>
  <description>
     Rviz panel to control a Bebop.
  </description>
  <maintainer email="062.127@gmail.com">Andreas Ziegler</maintainer>
  <license>BSD</license>

  <author>Andreas Ziegler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
